# Tracking

./: .gitignore  CMakeLists.txt  NeuralNet.h  README.md  index.rst  main.cpp  model.hpp.gch  object.hpp  pipeline.hpp  realsense_device.hpp
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in
docs/html/: NeuralNet_8h_source.html  annotated.html  classModel-members.html  classModel.html  classObject-members.html  classObject.html  classPipeline-members.html  classPipeline.html  classRealsense.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  helpers_8hpp_source.html  hierarchy.html  index.html  menudata.js  model_8hpp_source.html  object_8hpp_source.html  pipeline_8hpp_source.html  realsense__device_8hpp_source.html  structDetectionLayer-members.html  structDetectionLayer.html  structEmptyLayer-members.html  structEmptyLayer.html  structMaxPoolLayer2D-members.html  structMaxPoolLayer2D.html  structNeuralNet-members.html  structNeuralNet.html  structUpsampleLayer-members.html  structUpsampleLayer.html  structobject__attributes-members.html  structobject__attributes.html  structregion__of__interest-members.html  structregion__of__interest.html
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
docs/latex/: annotated.tex  classModel.tex  classObject.tex  classPipeline.tex  classRealsense.eps  classRealsense.tex  hierarchy.tex  refman.tex  structDetectionLayer.eps  structDetectionLayer.tex  structEmptyLayer.eps  structEmptyLayer.tex  structMaxPoolLayer2D.eps  structMaxPoolLayer2D.tex  structNeuralNet.eps  structNeuralNet.tex  structUpsampleLayer.eps  structUpsampleLayer.tex  structobject__attributes.tex  structregion__of__interest.tex
src/: CMakeLists.txt  NeuralNet.cpp  helpers.hpp  main.cpp  model.hpp  mqtt-client.hpp
